# ohmbudsman-digest-pipeline

./: Makefile  README.md  digest_pipeline.py  pyproject.toml
.github/workflows/: automation.yml  digest.yml  pyproject.tmol
config/: feeds.yml
digests/: 20240607_Sample.md
metadata/: content_index.csv
prompts/: one_shot_example.md  style_guide.txt
scripts/: archive_assets.py  create_social_snippets.py  generate_pdf.py  generate_podcast.py  run_pipeline.py  synthesize_audio.py  update_metadata.py
src/: digest_pipeline.py  fetch_summaries.py  generate_digest.py  render_pdf.py  send_digest.py
tests/: conftest.py  test_snap_lint.py
