[tool.poetry]
name = "ohmbudsman-digest"
version = "1.0.0"
description = "Automated Daily News Digest for Ohmbudsman Media LLC"
authors = ["Justin Waldrop <your-email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
openai = "1.23.0"
requests = "2.32.0"
feedparser = "6.0.11"
beautifulsoup4 = "4.12.3"
markdown = "3.5.2"
emoji = "2.10.0"
python-dotenv = "1.0.0"
rich = "12.6.0"
pydantic = "1.10.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
