[tool.poetry]
name = "ohmbudsman-digest"
version = "1.0.0"
description = "Automated Daily News Digest"
authors = ["Justin Waldrop <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "0.28.0"
requests = "2.32.0"
python-dotenv = "1.0.0"
# … your other deps …

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
